# framework

./: .gitignore  README.md  pyproject.toml
src/crya/: __init__.py  _registry.py  app.py  cli.py  console.py  entrypoint.py  responses.py  routing.py  testing.py  vite.py
src/crya/config/: README.md  __init__.py  base.py  errors.py  loader.py  proxy.py  schemas.py
src/crya/logging/: README.md  __init__.py
src/crya/middleware/: README.md  __init__.py  cors.py  defaults.py  loader.py
src/crya/orm/: README.md  __init__.py  migrations.py
src/crya/routing/: README.md  __init__.py  router.py
src/crya/templates/errors/: 400.loom  401.loom  403.loom  404.loom  422.loom
src/crya/templating/: README.md  __init__.py  compiler.py  components.py  renderer.py  tokens.py
src/crya/testing/: README.md
tests/: test_config.py  test_config_proxy.py  test_cors.py  test_logging.py  test_middleware.py  test_middleware_app.py  test_orm_app.py  test_routing.py  test_simple_app.py
tests/fixtures/config_proxy/: .env
tests/fixtures/config_proxy/config/: app.py
tests/fixtures/config_proxy/config/database/: main.py
tests/fixtures/templating/components/: alert.loom
tests/fixtures/templating/components/card/: header.loom
tests/fixtures/templating/templates/: comments.loom  for.loom  hello_name.loom  hello_unsafe_name.loom  if_elif.loom  if_else.loom  python.loom  python_in_comments.loom  simple_if.loom  verbatim.loom
tests/fixtures/test_app/middleware/app/: handlers.py  middlewares.py
tests/fixtures/test_app/middleware/config/: middleware.py
tests/fixtures/test_app/middleware/routes/: web.py
tests/fixtures/test_app/orm/app/: handlers.py  models.py
tests/fixtures/test_app/orm/routes/: web.py
tests/fixtures/test_app/simple/: .env  app.py
tests/fixtures/test_app/simple/app/: handlers.py
tests/fixtures/test_app/simple/routes/: web.py
tests/fixtures/test_app/simple/templates/: welcome.loom
tests/templating/: test_engine.py
(+1 files in other folders)
