[project]
name = "crya"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Einenlum", email = "contact@einenlum.com" }
]
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-elegant>=0.1.2",
]
