[project]
name = "crya"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Einenlum", email = "contact@einenlum.com" }
]
requires-python = ">=3.14"
dependencies = [
    "asyncclick>=8.3.0.7",
    "starlette>=0.52.1",
    "uvicorn>=0.41.0",
]

[tool.pytest.ini_options]
# With auto mode we don't need to use markers
# @pytest.mark.asyncio on all async tests
asyncio_mode = "auto"

[project.scripts]
crya = "crya.cli:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-elegant>=0.1.2",
]
